# VCDP

./: .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE
include/: VCDP.hpp
include/vcdp/: Config.hpp  Utils.hpp  VCDActions.hpp  VCDCheckers.hpp  VCDFile.cpp  VCDFile.hpp  VCDLexical.hpp  VCDP.hpp  VCDParser.cpp  VCDParser.hpp  VCDTypes.hpp  VCDValidationError.hpp  VCDValue.h  VCDValue.hpp  VListManager.hpp
src/: main.cpp
src/vcdp/: Utils.cpp  VCDFile.cpp  VCDFile.hpp  VCDLexical.hpp  VCDParser.cpp  VCDValue.cpp
tests/: CMakeLists.txt  big_file.cpp  commented_header.cpp  empty_file.cpp  header_comment.cpp  header_empty_comment.cpp  header_incomplete.cpp  header_indexed_var.cpp  header_indexed_var_size_inconsistent.cpp  header_missing_scope.cpp  header_missing_upscope.cpp  header_multi_topscopes.cpp  header_multiline_comment.cpp  header_nested_scopes.cpp  header_oneline.cpp  header_ranged_var.cpp  header_ranged_var_size_inconsistent.cpp  header_simple.cpp  header_simple_scope.cpp  header_simple_var.cpp  header_stuck_timescale.cpp  header_tabed.cpp  header_var_types.cpp  header_var_without_scope.cpp  incomplete_header.cpp  minimal_header.cpp  multiline_comment.cpp  oneline_header.cpp  tabed_header.cpp
tests/data/: commented_header.vcd  ghdl_counter.vcd  header_comment.vcd  header_empty_comment.vcd  header_indexed_var.vcd  header_indexed_var_size_inconsistent.vcd  header_missing_scope.vcd  header_missing_upscope.vcd  header_multi_topscopes.vcd  header_multiline_comment.vcd  header_nested_scopes.vcd  header_oneline.vcd  header_ranged_var.vcd  header_ranged_var_size_inconsistent.vcd  header_simple_scope.vcd  header_simple_var.vcd  header_stuck_timescale.vcd  header_var_types.vcd  header_var_without_scope.vcd  incomplete_header.vcd  minimal_header.vcd  questa_counter.vcd  tabed_header.vcd
